Fixed buttons appearence on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -408,8 +408,8 @@ body {
 }
 
 .mobile-row .f0-logo-img {
-    width: 300px;
-    padding: 30px;
+    width: 170px;
+    padding: 20px;
 }
 
 .mobile-row .start-button-div {
